text updated in html 1

--- a/tutorial1_getting_started/index.html
+++ b/tutorial1_getting_started/index.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    Welcome to Interactive Data Visualization Tutorials
+    David's Cloned and Modified Intro To Interactive Data Visualization Tools :)
+Hope everyone's having a good day.
     <script src="../lib/d3.js"></script>
     <script src="main.js"></script>
   </body>
