text updated in html (retry)

--- a/tutorial1_getting_started/index.html
+++ b/tutorial1_getting_started/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     David's Cloned and Modified Intro To Interactive Data Visualization Tools :)
-Hope everyone's having a good day.
+Hope everyone is having a good day.
     <script src="../lib/d3.js"></script>
     <script src="main.js"></script>
   </body>
